--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -59,6 +59,7 @@
   "dotnet.defaultSolution": "src.sln",
   "cSpell.words": [
     "Behaviour",
+    "Cysharp",
     "Newtonsoft",
     "Rigidbody",
     "Scriptable",
